k8s_all/lab2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab2-ingress
  namespace: lab2-services
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /api/(user(/|$)(.*))
            backend:
              service:
                name: ase-user-service
                port:
                  number: 8081
          - pathType: ImplementationSpecific
            path: /api/(notification(/|$)(.*))
            backend:
              service:
                name: ase-notification-service
                port:
                  number: 8082
          - pathType: ImplementationSpecific
            path: /api/(conference(/|$)(.*))
            backend:
              service:
                name: ase-conference-service
                port:
                  number: 8083
          - pathType: ImplementationSpecific
            path: /api/(contribute(/|$)(.*))
            backend:
              service:
                name: ase-contribute-service
                port:
                  number: 8084
          - pathType: ImplementationSpecific
            path: /api/(file(/|$)(.*))
            backend:
              service:
                name: ase-file-service
                port:
                  number: 8085

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab2-ingress-front
  namespace: lab2-services
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ase-frontend
                port:
                  number: 80
